--- a/BoilerPlate/BoilerPlate.vcxproj.filters
+++ b/BoilerPlate/BoilerPlate.vcxproj.filters
@@ -6,13 +6,13 @@
     <ClCompile Include="SDLEvent.cpp" />
     <ClCompile Include="TimeManager.cpp" />
     <ClCompile Include="stb_image.c" />
-    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="UtilitiesSource.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.hpp" />
     <ClInclude Include="SDLEvent.hpp" />
     <ClInclude Include="TimeManager.hpp" />
-    <ClInclude Include="Header.hpp" />
+    <ClInclude Include="Utilities.hpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Engine">
